samples/_failures_safe/1761793948_79a3fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_880b7be8.c: In function ‘next_token’:
./samples/SAFE/__tmp_880b7be8.c:172:14: error: ‘is_’ undeclared (first use in this function)
  172 |     else if (is_
      |              ^~~
./samples/SAFE/__tmp_880b7be8.c:172:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_880b7be8.c:172:17: error: expected ‘)’ at end of input
  172 |     else if (is_
      |             ~   ^
      |                 )
./samples/SAFE/__tmp_880b7be8.c:172:5: error: expected declaration or statement at end of input
  172 |     else if (is_
      |     ^~~~
